# -AMPHOREUS-

./: .gitignore  BioAgent.cpp  BioAgent.h  CMakeLists.txt  CMakePresets.json  IFLOW.md  LICENSE  LLMClient.cpp  LLMClient.h  README.md  SimulationEnvironment.cpp  SimulationEnvironment.h  build.bat  build.ps1  build_final.bat  build_full.bat  compile_sim.bat  compile_sim_only.bat  compile_vs.bat  compile_vs_short.bat  config.json  llm_system_prompt_detailed.txt  main.cpp  simple_test.cpp
